[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Nunito/Nunito-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/gui/character_select/CharacterSelect.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[node name="CharacterSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 64
custom_constants/margin_top = 32
custom_constants/margin_left = 64
custom_constants/margin_bottom = 32

[node name="Label" type="Label" parent="MarginContainer"]
margin_left = 64.0
margin_top = 32.0
margin_right = 508.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 1 )
text = "Character Select"

[node name="ButtonList" type="VBoxContainer" parent="."]
anchor_left = 0.6
anchor_top = 0.4
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 0
grow_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NextBtn" type="Button" parent="ButtonList"]
margin_left = 121.0
margin_top = 108.0
margin_right = 185.0
margin_bottom = 148.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "Next"
flat = true

[node name="BackBtn" type="Button" parent="ButtonList"]
margin_left = 121.0
margin_top = 152.0
margin_right = 185.0
margin_bottom = 192.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "Back"
flat = true

[connection signal="pressed" from="ButtonList/NextBtn" to="." method="_on_NextBtn_pressed"]
[connection signal="pressed" from="ButtonList/BackBtn" to="." method="_on_BackBtn_pressed"]
